# CPU

Codelite/: Makefile  cortex-m3.workspace  cpu_and_desktop.workspace
Codelite/.codelite/: cortex-m3.session  cpu_and_desktop.session  refactoring.db
Codelite/12/: 12.elf  12.mk  12.project  12.txt  Makefile  alt_sys_init.c  linker.h  linker.x  main.c  mem_init.mk  memory.gdb  public.mk  settings.bsp  summary.html  system.h  unsaved.sopcinfo
Codelite/12/Debug/: HAL_src_alt_alarm_start.c.d  HAL_src_alt_alarm_start.c.o.d  HAL_src_alt_busy_sleep.c.d  HAL_src_alt_close.c.d  HAL_src_alt_dcache_flush.c.d  HAL_src_alt_dcache_flush.c.o.d  HAL_src_alt_dcache_flush_all.c.d  HAL_src_alt_dcache_flush_all.c.o.d  (+116 more)
Codelite/123/: 123.project
Codelite/nios_first/: nios_first.elf  nios_first.mk  nios_first.project  nios_first.txt
Codelite/niosfirst/: Makefile  alt_sys_init.c  linker.h  linker.x  main.c  mem_init.mk  memory.gdb  niosfirst.mk  niosfirst.project  public.mk  settings.bsp  summary.html  system.h
Codelite/niosii_tst/: canios.elf  linker.h  linker.x  mem_init.mk  niosii_tst.elf  niosii_tst.mk  niosii_tst.project  niosii_tst.txt
Codelite/ppp/: alt_sys_init.c  ifi_avalon_can_advanced.c  ifi_avalon_can_advanced_regs.h  main.c  ppp.project  system.h
Codelite/stm32/: stm32.mk  stm32.project
QT/NIOSII/: proj.qbs
QT/app-and-lib/: app_and_lib.qbs
QT/nios/: main.c  nios.qbs
QT/niosModule/: niosModule.qbs
QT/niosdram/: proj.qbs
QT/untitled/: CMakeLists.txt  main.c
QT/untitled/hal_bsp/: settings.bsp  summary.html  system.h
QT/untitled1/: CMakeLists.txt
(+867 files in other folders)
